--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Amirhossein Lotfi"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "M.Sc. Student at IUST. My research is at the intersection of Materials Science and Machine Learning."
   location         : "Tehran, Iran"
   employer         : "Iran University of Science and Technology"
   uri              : https://github.com/AmirLotfiSAI
