--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   github            : "AmirLotfiSAI" # <-- CORRECTED
   
   # Social media
-  linkedin          : "https://www.linkedin.com/in/amirhossein-lotfi-a3362a232/"
+  linkedin          : "amirhossein-lotfi-a3362a232/"
   # twitter         : # Your username for X / Twitter
   #inspire-hep      : # URL
   #impactstory      : # URL
