--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   github            : "AmirLotfiSAI" # <-- CORRECTED
   
   # Social media
-  linkedin          : "amirhossein-lotfi-a3362a232/"
+  linkedin          : "Amirhossein Lotfi"
   # twitter         : # Your username for X / Twitter
   #inspire-hep      : # URL
   #impactstory      : # URL
@@ -58,7 +58,7 @@ author:
   #keybase          : # Username
   #instagram        : # Username
   #lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/amirhossein-lotfi-a3362a232/
+  linkedin         : amirhossein-lotfi-a3362a232/
   #mastodon         : # URL
   #medium           : # URL
   #pinterest        : # Username
