--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Site Settings
 locale                  : "en-US"
-site_theme              : "default" # Currently available options are "default", "air"
+site_theme              : "air" # Currently available options are "default", "air"
 title                   : "Amirhossein Lotfi | Academic Portfolio"
 title_separator         : "-"
 name                    : &name "Amirhossein Lotfi"
